--- a/www/index.html
+++ b/www/index.html
@@ -13,28 +13,7 @@
         <script src="js/functions.js"></script>
         <script src="js/app.js"></script>
     </head>
-    <body ng-app="TempoAgora" ng-controller="MainController">
-        <ion-view view-title="Tempo Agora">
-            <ion-slide-box  on-slide-changed="slideHasChanged($index)">
-                <ion-slide ng-repeat="item in content | orderBy:'id'">
-                    <ion-header-bar align-title="center" class="bar bar-header bar-light">
-                        <h1 class="title">{{item.location}}</h1>
-                        <button class="button icon ion-plus-round"></button>
-                    </ion-header-bar>
-                </ion-slide>
-            </ion-slide-box>
-            <ion-content has-header="true" padding="true">
-                <div class="row row-center">
-                    <div class="col col-center">
-                        <div class="current-time">
-                            <div><span date-now="EEE, MMM dd h:s a"></span></div>
-                            <img src="http://developers.agenciaideias.com.br/images/tempo/28.png">
-                            <div><span><b>21°C</b></span></div>
-                            <div><span>Noite Nublado</span></div>
-                        </div>
-                    </div>
-                </div>
-            </ion-content>
-        </ion-view>
+    <body ng-app="TempoAgora">
+        <ion-nav-view></ion-nav-view>
     </body>
 </html>
